# upnp-cleaner

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check-compilation.yml
src/: args.rs  main.rs
