[package]
name = "upnp-cleaner"
version = "0.1.0"
edition = "2024"
authors = ["Nekes <nekes@riseup.net>"]
license = "MIT"
readme = "README.md"
description = "Deactivate desired port mappings from UPnP in router"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
igd-next = { version = "0.16.2", features = ["aio_tokio"] }
tokio = { version = "1.47.1", features = ["net", "rt-multi-thread", "macros"] }
